src/tests/cases/snapshots/excise__tests__cases__ui__delete_file_press_n-5.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[4]"
---
 Total: 12.0K (4 files), freed: 0 | /tmp/excise_tests/delete_file_press_n                                                                                                                     
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────────────────┐
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│████████████████████████████████████████████████████████████file2████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████4.0K (33%)██████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                                                              │
│███████████████████┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐                  │
│███████████████████│                                                                                                                                                     │                  │
│███████████████████│                                                                                                                                                     │                  │
│███████████████████│                                                           Are you sure you want to quit?                                                            │)                 │
├───────────────────│                                                                                                                                                     │                  │
│                   │                                                                                                                                                     │                  │
│                   │                                                                                                                                                     │                  │
│                   │                                                                                                                                                     │                  │
│                   │                                                                        (y/n)                                                                        │                  │
│                   │                                                                                                                                                     │                  │
│                   └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                  │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                            file3                                                            │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                         4.0K (33%)                                                          │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
│                                                                                                                             │                                                              │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────────────────────┘
 SELECTED: file2 (4.0K)                                                                                                                                                                       
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <BACKSPACE> - delete, <+/-/0> - zoom in/out/reset, <q> - quit
